--- a/08/global.css
+++ b/08/global.css
@@ -60,17 +60,18 @@ h1 {
 }
 
 .details {
+  display: inline-block;
 
 }
 
 .location {
-  display: inline-block;
+  display: block;
   background-color: #fff;
   color: #000;
 }
 
 .dates {
-  display: inline-block;
+  display: block;
   background-color: #C1C1C1;
   color: #000;
 }
