--- a/12/global.css
+++ b/12/global.css
@@ -1,13 +1,15 @@
-/* Guess the font. Just get close--doesn't have to be perfect. */
+
 .left_stuff{
   float: left;
 }
 img{
-  height: 100px;
-  width: 100px;
+  height: 70px;
+  width: 70px;
   float: left;
   margin: 10px;
-
+}
+#right_image{
+  margin-left: 30px;
 }
 .clear{
   clear:both;
@@ -16,7 +18,14 @@ p{
   font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
   font-size: 12px;
   font-weight: bold;
-  width: 100px;
+  width: 120px;
   float: left;
-  margin: 10px 0px 0px 0px;
+  margin: 10px 0 0 0;
+}
+.small_text{
+  font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
+  font-size: 10px;
+  font-weight: normal;
+  display: inline;
+
 }
