--- a/12/global.css
+++ b/12/global.css
@@ -1,1 +1,23 @@
 /* Guess the font. Just get close--doesn't have to be perfect. */
+img {
+  border-radius: 3px;
+  margin-left: 10px;
+  margin-top: 10px;
+  height: 75px;
+  width: 75px;
+  float: left;
+}
+
+.headline {
+  float: left;
+  margin-left: 10px;
+  margin-top: 10px;  
+  width: 125px;
+}
+
+.source {
+  float: left;
+  margin-left: 10px;
+  margin-top: 10px; 
+  width: 125px;
+}
