--- a/11/global.css
+++ b/11/global.css
@@ -1,1 +1,13 @@
 /* Guess the font. Just get close--doesn't have to be perfect. */
+
+img {
+    padding: 5px;
+    float: left;
+}
+
+.icon_text {
+    text-transform: uppercase;
+    font-size: 10px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
