--- a/12/global.css
+++ b/12/global.css
@@ -1,8 +1,8 @@
 /* Guess the font. Just get close--doesn't have to be perfect. */
 
 img{
-  width: 75px;
-  height: 75px;
+  width: 73px;
+  height: 73px;
   border-radius: 5px;
   margin-left: 9px;
   margin-top: 9px;
@@ -10,14 +10,22 @@ img{
 
 .icon_text {
   display: inline-block;
+  position: relative; top: -13px;
   font-size: 14px;
-  color: blue;
-  width: 140px;
+  color: #233079;
+  width: 133px;
   padding-left: 10px;
   margin-top: 10px;
+  font-weight: bold;
+
 }
 
 #story_one {
   float: left;
 }
 
+p{
+  color: gray;
+  padding-top: 6px;
+  font-size: 12px;
+}
