div is giving me a hard time

--- a/12/global.css
+++ b/12/global.css
@@ -26,6 +26,6 @@ p{
   font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
   font-size: 10px;
   font-weight: normal;
-  display: inline;
+/*  display: inline;*/
 
 }
