--- a/10/global.css
+++ b/10/global.css
@@ -4,17 +4,19 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: black;
   background-color: white;
-  padding: 5px 5px 5px 5px;
+  padding: 3px 9px 4px 0px;
   margin: 6px 7px 0px 5px;
   text-align: left;
-  width: 118px;
-  float: left;
-  border-right: solid 1px;
+  width: 134px;
+  /* float: left; */
+  display: inline-block;
+  border-right: solid 1px #C1C1C1;
 }
 /*header for boxes*/
 h4 {
   font-size: 16px;
-  font-weight: 600;
+  letter-spacing: -1.25px;
+  font-weight: 500;
   padding-bottom: 4px;
 }
 /*content of box*/
