--- a/12/global.css
+++ b/12/global.css
@@ -2,22 +2,28 @@
 img {
   border-radius: 3px;
   margin-left: 10px;
-  margin-top: 10px;
-  height: 75px;
-  width: 75px;
+  height: 70px;
+  width: 70px;
   float: left;
+  padding-right: 10px;
+}
+
+.main {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;  
+  float: left;
+  padding-top: 10px;
+  width: 230px;
 }
 
 .headline {
-  float: left;
-  margin-left: 10px;
-  margin-top: 10px;  
-  width: 125px;
+  font-weight: bold;
+  font-size: 12px; 
+  line-height: 1.2;
+  color: #352269;
 }
 
 .source {
-  float: left;
-  margin-left: 10px;
-  margin-top: 10px; 
-  width: 125px;
+  padding-top: 3px;
+  font-size: 11px;
+  color: gray;
 }
