--- a/10/global.css
+++ b/10/global.css
@@ -1,1 +1,30 @@
 /* Actual font is unknown. Use any from past assignments. */
+/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+.box {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  float: left;
+  background-color: white;
+  margin-top: 10px;
+  padding-top: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  max-width: 130px;
+  border-left-width: thin;
+  border-left-color: black;
+  border-left-style: solid
+}
+
+
+h4 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+
+.blurb {
+ 
+  font-size: 12px;
+  line-height: 125%
+}
