--- a/11/global.css
+++ b/11/global.css
@@ -1,1 +1,21 @@
 /* Guess the font. Just get close--doesn't have to be perfect. */
+
+.icon_text {
+
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-left: 5px;
+  margin-top: 10px;
+}
+
+img {
+
+  /*float:left;*/
+  position:relative;
+  top: 5px;
+  left: 5px;
+}
+
+
