--- a/12/global.css
+++ b/12/global.css
@@ -1,1 +1,35 @@
 /* Guess the font. Just get close--doesn't have to be perfect. */
+
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+img {
+    padding: 10px;
+    float: left;
+}
+
+.title {
+    font-weight: bold;
+    font-size: 12px;
+    padding-top: 10px;
+}
+
+.source {
+    font-size: 11px;
+    color: #bdbdbd;
+    padding-top: 10px;
+}
+
+p {
+    width: 200px;
+    padding-right: 25px;
+}
+
+.left_box {
+    float: left;
+}
+
+.right_box {
+    float: left;
+}
