--- a/13/global.css
+++ b/13/global.css
@@ -1,1 +1,40 @@
-/* Guess the font. Just get close--doesn't have to be perfect. */
+.top_bar{
+  margin: 5px 10px 0px 10px;
+  font-size: 10px;
+}
+img{
+  float:left;
+  margin: 2px;
+}
+.clear{
+  clear:both;
+}
+.search{
+  margin-left: 95px;
+}
+.top_bar_text{
+  float: left;
+  display:inline-block;
+  margin: 5px 5px 0px 5px;
+}
+.cadilac_logo{
+  margin: 25px 0px 0px 16px;
+  border: 1px solid black
+}
+.the_times{
+  margin: 30px 0px 0px 109px;
+}
+.date{
+  float:left;
+  margin: 14px 0px 0px 61px;
+  font-size: 12px ;  
+}
+.sections_bar{
+  margin: 25px 0px 0px 93px;
+}
+.tabs{
+  padding: 0px 0px 0px 11px;
+  display:inline;
+  float: left;
+  font-size: 12px
+}
