--- a/10/global.css
+++ b/10/global.css
@@ -1,12 +1,34 @@
 /* Actual font is unknown. Use any from past assignments. */
 
+
+
 .box {
   margin-top: 10px;
-  margin-left: 10px;
   float: left;
   display: inline-block;
   width: 20%;
+  font-family: "Arial", Helvetica, sans-serif;
+  border-style: solid;
+  border-right-width: 1px;
+  border-right-color: #D5D5D5;
+}
 
+.box.end {
+ border-style: none; 
+}
+
+.box h4 {
+  font-size: 12pt;
+  font-weight: 600;
+  padding: 0px 10px;
+}
+
+.blurb {
+  font-size: 9pt;
+  font-weight: 200;
+  line-height: 125%;
+  color: #36454f;
+  padding: 5px 10px;
 
 }
 
