--- a/13/global.css
+++ b/13/global.css
@@ -30,11 +30,47 @@ img{
   font-size: 12px ;  
 }
 .sections_bar{
-  margin: 25px 0px 0px 93px;
+  margin-top: 11px;
+  margin-left: 10px;
+  border-top:3px solid black;
+  border-bottom: 1px solid black;
+  padding: 10px 0px 11px 70px;
 }
 .tabs{
-  padding: 0px 0px 0px 11px;
+  padding: 0px 0px 0px 15px;
   display:inline;
   float: left;
   font-size: 12px
 }
+
+.add_bar{
+  margin:10px 0px 0px 10px;
+  border: 1px solid black;
+  padding: 0px 0px 0px 10px;
+}
+#add_logo{
+  object-fit: cover;
+  width: 55px;
+  height: 55px;
+  padding: 13px 0px 0px 25px;
+}
+#car{
+  margin: 0px 0px 0px 38px;
+}
+.lines{
+  font-size: 12px;
+  margin: 30px 0px 0px 370px;
+  line-height: 15px;
+  padding-bottom: 30px
+}
+.column_left{
+  float: left;
+  width: 180px;
+  margin-left: 10px;
+}
+
+
+
+
+
+
