--- a/05/global.css
+++ b/05/global.css
@@ -7,39 +7,37 @@ body {
 
 #intro {
   font-size: 16px;
-  padding-top: 1px;
+  padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
-  padding-left: 20px;
-  border-bottom: 1px solid green;
+  border-bottom: 1px solid #C9C79C;
 }
 
+#london {
+  margin-top: -4px;
+}
 p {
   background-color: #39362D;
   font-size: 14px;
-  padding-top: 1px;
-  padding-right: 20px;
-  padding-bottom: 20px;
   padding-left: 20px;
-
 }
 
 h1 {
-  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+ font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
   font-weight: bold;
   background-color: #812C5B;
   font-size: 30px;
   text-align: center;
   padding: 20px;
-  border-bottom: 1px solid blue;
+  border-bottom: 1px solid #A82188;
 }
 
 h2 {
   text-align: center;
   background-color: #39362D;
   font-size: 20px;
-  padding-top: 20px;
-  padding-bottom: 8px;
+  padding: 20px;
+  padding-bottom: 9px;
 }
 
 h3 {
@@ -51,18 +49,21 @@ h3 {
   font-size: 22px;
   padding-top: 20px;
   padding-left: 20px;
-  padding-bottom: 16px;
+  
 }
 
 a {
   background-color: black;
   font-size: 16px;
   text-transform: uppercase;
-  text-decoration:none;
+  text-decoration: none;
   color: white;
-  margin-top: 0px;
-  padding-top: 3px;
-  padding-right: 4px;
-  padding-bottom: 3px;
-  padding-left: 3px;
+  padding-top: 4px;
+  padding-right: 5px;
+  padding-bottom: 4px;
+  padding-left: 2px;
+  display: inline-block;
+  margin-top: 14px;
+  margin-bottom: 3px;
+  
 }
