--- a/13/_framework.css
+++ b/13/_framework.css
@@ -1,5 +1,5 @@
 body.show_goal::after{
-  background-image: url("Your Screenshot Goes Here");
+  background-image: url("file:///Users/patrickclark/Desktop/Screen%20Shot%202016-03-19%20at%209.48.44%20PM.png");
 }
 
 /* ------------------------------------------------------- */
@@ -54,7 +54,7 @@ table {
 }
 
 body.show_goal::after{
-  background: url("http://cl.ly/fROg/Screen%20Shot%202016-03-17%20at%207.49.37%20AM.png");
+  background: url();
   background-repeat: no-repeat;
   content: " ";
   height: 800px;
