--- a/06/global.css
+++ b/06/global.css
@@ -5,7 +5,12 @@ body {
 
 #intro {
   background-color: #39362D;
+}
 
+.month {
+  background-color: #39362D;
+  padding-top: 20px;
+  padding-left: 20px;
 }
 
 h1 {
@@ -25,10 +30,22 @@ h1 {
 
  } 
 
+h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+
 p {
   padding-top: 0px;
   padding-right: 20px;
   padding-bottom: 20px;
   padding-left: 20px;
   border-bottom: 1px solid white;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
