I probably won't do much else with this so I am committing here. We have other fish to fry. It's not a perfect recreation of a part of the NYT front page. Some of the remaining work: 1.Get hover-over to function so all of the links in this section make themselves known when you hover over them. 2. account for the space in the vertical line between the columns. It is actually a border left of the artwork and left of the story below the artwork. 3. add a horizontal rule the width of the 2 columns below the "Join us on Facebook" bulleted link. 4. the vertical rule should not be continuous. 5. add the crossword puzzle graphic. 6. match the font a little better. 8. make the bullets appear with the 5 editorial links. They have the same bullet that is on the "join us on Facebook" link, but they don't show up. 9. refactor. I have a lot of waste and duplication on global.css. On the good side, I was able to use float successfully twice in this. And while it's not an exact replica, if it was a made from scratch layout it would be kind of busy but not completely ugly.

--- a/13/_framework.css
+++ b/13/_framework.css
@@ -64,6 +64,6 @@ body.show_goal::after{
   left: 0;
 }
 
-body.show_goal.see_through::after{
+body.show_goal.see_through::after{file:///
   opacity: 0.6;
 }
