--- a/13/global.css
+++ b/13/global.css
@@ -134,14 +134,21 @@ p {
 #footer_left {
   float:left;
   margin-left: 5px;
-
+  max-width: 190px;
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: gray;
 }
 
 #footer_right {
   border-left-width: 1px;
   border-left-style: solid;
   border-left-color: gray;
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: gray;
   padding-left: 5px;
+  margin-top: 13px;
   max-width: 195px;
   margin-left: 195px;
 }
