--- a/06/global.css
+++ b/06/global.css
@@ -13,6 +13,10 @@ body {
   padding-left: 20px;
 }
 
+.festival {
+  font-size: 14px;
+}
+
 h1 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
   text-align: center;
@@ -47,5 +51,14 @@ p {
 
 a {
   color: white;
+  font-size: 16px;
+  text-transform: uppercase;
   text-decoration: none;
-}
+  background-color: red;
+  display: inline-block;
+  padding-top: 4px;
+  padding-right: 4px;
+  padding-bottom: 4px;
+  padding-left: 3px;
+  margin-top: 14px;
+  margin-bottom: 2px;
