--- a/06/global.css
+++ b/06/global.css
@@ -22,8 +22,8 @@ h1 {
   text-align: center;
   font-size: 30px;
   padding: 20px;
-  background-color: purple;
-  border-bottom: 1px solid white;
+  background-color: #812C5B;
+  border-bottom: 1px solid #C3388E;
  }
  
  h2 {
@@ -42,11 +42,10 @@ h3 {
 }
 
 p {
-  padding-top: 0px;
   padding-right: 20px;
   padding-bottom: 20px;
   padding-left: 20px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #C9C79C;
 }
 
 a {
