--- a/07/global.css
+++ b/07/global.css
@@ -1,2 +1,42 @@
-/*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+}
+
+#intro {
+  background-color: gray;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid white;
+}
+
+.month {
+  background-color: gray;
+  padding-left: 20px;
+}
+
+h1 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  font-size: 30px;
+  text-align: center;
+  background-color: purple;
+  padding-top: 19px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid white;
+}
+
+h2 {
+  font-size: 20px;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 9px;
+}
+
+h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  padding-top: 20px;
+}
