Short of adding a tag somewhere in the HTML, I'm not sure how to continue progressing with 7

--- a/06/global.css
+++ b/06/global.css
@@ -53,7 +53,7 @@ a {
   font-size: 16px;
   text-transform: uppercase;
   text-decoration: none;
-  background-color: red;
+  background-color: black;
   display: inline-block;
   padding-top: 4px;
   padding-right: 4px;
