--- a/07/global.css
+++ b/07/global.css
@@ -3,27 +3,36 @@ body {
   color: white;
 }
 
+div {
+  border-bottom: 1px solid #C9C79C;
+}
+
 #intro {
-  background-color: gray;
+  background-color: #39362D;
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 20px;
-  border-bottom: 1px solid white;
 }
 
 .month {
-  background-color: gray;
+  background-color: #39362D;
+}
+
+.festival {
+  font-size: 14px;
+  padding-bottom: 14px;
   padding-left: 20px;
+  border: none;
 }
 
 h1 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
   font-size: 30px;
   text-align: center;
-  background-color: purple;
+  background-color: #812C5B;
   padding-top: 19px;
   padding-bottom: 20px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #C3388E;
 }
 
 h2 {
@@ -39,4 +48,20 @@ h3 {
   text-transform: uppercase;
   text-decoration: underline;
   padding-top: 20px;
+  padding-left: 20px;
+}
+
+a {
+  color: white;
+  font-size: 16px;
+  background-color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding-top: 4px;
+  padding-right: 4px;
+  padding-bottom: 4px;
+  padding-left: 3px;
+  display: inline-block;
+  margin-top: 14px;
+  margin-bottom: 3px;
 }
