--- a/08/global.css
+++ b/08/global.css
@@ -1,2 +1,13 @@
-/*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  color: white;
+  font-size: 30px;
+  background-color: purple;
+  text-align: center;
+  padding: 20px;
+  border-bottom: 1px solid white;
+}
+
