--- a/08/global.css
+++ b/08/global.css
@@ -2,7 +2,13 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+div {
+    background-color: gray;
+    color: white;
+}
+
 h1 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif; 
   color: white;
   font-size: 30px;
   background-color: purple;
@@ -11,3 +17,26 @@ h1 {
   border-bottom: 1px solid white;
 }
 
+h2 {
+  font-size: 20px;
+  text-align: center;
+  padding-top: 19px;
+  padding-bottom: 10px;
+}
+
+h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  color: white;
+  font-size: 22px;
+  text-decoration: underline;
+  text-transform: uppercase;
+  padding-top: 19px;
+  padding-left: 20px;
+}
+
+p {
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  border-bottom: 1px solid white;
+}
